# mykb

./: .env.example  .gitignore  CLAUDE.md  Caddyfile.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  go.mod  go.sum  main.go  mykb.service  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: app.go  app_test.go  chunks.py  config.py  database.py  main.py  models.py
app/api/: routes.py
app/mcp/: server.py
app/oauth/: middleware.py  routes.py  tokens.py
config/: config.go  config_test.go
embedding/: ollama.go  ollama_test.go  openai.go  openai_test.go  provider.go  provider_test.go
go/: coverage.out  go.mod  go.sum  httpd.out  main.go
go/httpd/: mcp.go  oauth.go  server.go  tokens.go
go/mcp/: server.go  server_test.go  tools.go
go/storage/: chunks.go  chunks_test.go  clients.go  db.go  tokens.go  tokens_test.go
httpd/: mcp.go  oauth.go  ratelimit.go  ratelimit_test.go  server.go  server_test.go  tokens.go  tokens_test.go
mcp/: protocol.go  server.go  server_test.go  tools.go
storage/: chunks.go  chunks_test.go  clients_test.go  db.go  db_test.go  embeddings.go  embeddings_test.go  settings.go  settings_test.go  storage.go  tokens.go  tokens_test.go
tests/: conftest.py  test_api.py  test_mcp.py  test_oauth.py
vector/: index.go  index_test.go
