[project]
name = "mykb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.40.0",
]
